# apple-notes-logbook-mcp

./: .editorconfig  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  Tool-Knowledge.md  lefthook.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
openspec/changes/add-logbook-mcp-server/: design.md  proposal.md  tasks.md
openspec/changes/add-logbook-mcp-server/specs/logbook/: spec.md
openspec/changes/archive/2026-06-15-add-logbook-mcp-server/: design.md
openspec/changes/archive/2026-06-15-add-logbook-mcp-server/specs/logbook/: spec.md
openspec/changes/archive/2026-07-07-harden-and-extend-logbook/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-07-harden-and-extend-logbook/specs/logbook/: spec.md
openspec/specs/logbook/: spec.md
src/apple_notes_logbook_mcp/: __init__.py  core.py  notes.py  server.py
tests/: test_core.py  test_notes.py  test_server.py
